@@ -1,3 +1,11 @@
+2014-08-26  Jason Merrill  <jason@redhat.com>
+
+	PR c++/58624
+	* pt.c (tsubst_decl) [VAR_DECL]: Copy TLS model.
+	(tsubst_copy_and_build) [VAR_DECL]: Use TLS wrapper.
+	* semantics.c (finish_id_expression): Don't call TLS wrapper in a
+	template.
+
 2014-08-25  Jason Merrill  <jason@redhat.com>
 
 	* pt.c (check_explicit_specialization): Don't complain about
